docs/pages/versions/v55.0.0/sdk/ui/jetpack-compose/surface.mdx
---
title: Surface
description: 一个用于样式化内容容器的 Jetpack Compose Surface 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

Expo UI Surface 与官方 Jetpack Compose [Surface](https://developer.android.com/develop/ui/compose/designsystems/material3) API 保持一致，并提供一个容器，用于应用 Material Design 的 Surface 样式，包括颜色、海拔和内容颜色。

## 安装

<APIInstallSection />

## 用法

### 基础 Surface

```tsx BasicSurfaceExample.tsx
import { Host, Surface, Text } from '@expo/ui/jetpack-compose';
import { paddingAll } from '@expo/ui/jetpack-compose/modifiers';

export default function BasicSurfaceExample() {
  return (
    <Host matchContents>
      <Surface modifiers={[paddingAll(16)]}>
        <Text>Surface 上的内容</Text>
      </Surface>
    </Host>
  );
}
```

### 带海拔的 Surface

使用 `tonalElevation` 和 `shadowElevation` 来控制 Surface 的视觉深度。

```tsx SurfaceElevationExample.tsx
import { Host, Surface, Column, Text } from '@expo/ui/jetpack-compose';
import { paddingAll } from '@expo/ui/jetpack-compose/modifiers';

export default function SurfaceElevationExample() {
  return (
    <Host matchContents>
      <Column modifiers={[paddingAll(16)]}>
        <Surface tonalElevation={1} shadowElevation={2} modifiers={[paddingAll(16)]}>
          <Text>低海拔</Text>
        </Surface>
        <Surface tonalElevation={4} shadowElevation={8} modifiers={[paddingAll(16)]}>
          <Text>高海拔</Text>
        </Surface>
      </Column>
    </Host>
  );
}
```

### 带自定义颜色的 Surface

使用 `color` 和 `contentColor` 属性覆盖默认的 Material 主题颜色。

```tsx SurfaceCustomColorsExample.tsx
import { Host, Surface, Text } from '@expo/ui/jetpack-compose';
import { paddingAll } from '@expo/ui/jetpack-compose/modifiers';

export default function SurfaceCustomColorsExample() {
  return (
    <Host matchContents>
      <Surface
        color="#1E3A5F"
        contentColor="#FFFFFF"
        tonalElevation={2}
        modifiers={[paddingAll(16)]}>
        <Text color="#FFFFFF">自定义颜色的 Surface</Text>
      </Surface>
    </Host>
  );
}
```

### 带形状和边框的 Surface

使用 `shape` 属性裁剪内容，并使用 `border` 在 Surface 周围绘制描边。

```tsx SurfaceShapeBorderExample.tsx
import { Host, Surface, Shape, Text } from '@expo/ui/jetpack-compose';
import { paddingAll } from '@expo/ui/jetpack-compose/modifiers';

export default function SurfaceShapeBorderExample() {
  return (
    <Host matchContents>
      <Surface
        shape={Shape.RoundedCorner({
          cornerRadii: { topStart: 16, topEnd: 16, bottomStart: 16, bottomEnd: 16 },
        })}
        border={{ width: 2, color: '#6200EE' }}
        modifiers={[paddingAll(16)]}>
        <Text>带边框的圆角 Surface</Text>
      </Surface>
    </Host>
  );
}
```

## API

```tsx
import { Surface } from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/surface" apiName="Surface" />
